--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,18 +4,18 @@
 
 @layer components {
   .stats {
-    @apply bg-[#091f1c] text-white p-4 flex-1 rounded-md border-[#004337] border-2;
+    @apply bg-[#151c3f] text-white p-4 flex-1 rounded-md border-[#002a43] border-2;
   }
   .stats-container {
-    @apply bg-[#091f1c] p-5 rounded-lg border-[#004337] border;
+    @apply bg-[#151c3f] p-5 rounded-lg border-[#002a43] border;
   }
   .countdown {
-    @apply p-8 text-5xl text-center text-white  rounded-lg lg:min-w-[150px] bg-[#013f34];
+    @apply p-8 text-5xl text-center text-white  rounded-lg lg:min-w-[150px] bg-[#1e295c];
   }
   .countdown-label {
     @apply text-center text-white uppercase text-sm pt-4;
   }
   .admin-button {
-    @apply bg-[#091f1c] p-2 flex-1 rounded-md border-[#004337] border-2 hover:bg-emerald-500/50;
+    @apply bg-[#151c3f] p-2 flex-1 rounded-md border-[#002a43] border-2 hover:bg-[#5089a3];
   }
 }
